--- a/templates/test2_updated.html
+++ b/templates/test2_updated.html
@@ -359,6 +359,7 @@
             <span class="spinner-border spinner-border-sm d-none" role="status" aria-hidden="true"></span>
             <i class="bi bi-printer"></i> Print & Log
         </button>
+        <a href="{{ url_for('download_invoice_log') }}" class="btn btn-success btn-lg"><i class="bi bi-download"></i> Download Excel</a>
         <span id="print-log-status" class="ms-2 text-muted small">Loading sequence info...</span>
     </div>
 
